# ShopManageSystem

./: CMakeLists.txt  main.cpp  main.qml
include/: Base.h  Database.h  Item.h  Model.h  Order.h  User.h  Util.h
view/: AddNewItemView.qml  LoginView.qml  OrderDetailsView.qml  OrderManageView.qml  OrderView.qml  RegisteView.qml  ShopManageView.qml  ShopView.qml  StatisticsView.qml  UpdateItemView.qml
